data/usersCode/fvvdvfsdfv/question1/error.txt
/home/gauravghati/clash2/data/usersCode/fvvdvfsdfv/question1/code1-0.cpp:1:1: error: ‘xgdfgsfgdn’ does not name a type
 xgdfgsfgdn dfg dfgdf gdfg df
 ^~~~~~~~~~
